stating html structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <header>
+      <picture>
+        <img src="" alt="" />
+      </picture>
+      <nav>
+        <a href="">Frontend</a>
+        <a href="">Backend</a>
+        <a href="">Webdesign</a>
+        <a href="">Contact us</a>
+      </nav>
+    </header>
+    <section id="top-section"></section>
+    <section id="information-section"></section>
+    <section id="testimonial-section"></section>
+    <footer></footer>
   </body>
 </html>
