images folder added along with intro section

--- a/index.html
+++ b/index.html
@@ -9,16 +9,32 @@
   <body>
     <header>
       <picture>
-        <img src="" alt="" />
+        <img src="./images/Code Elite.png" alt="logo of code elite academy" />
       </picture>
       <nav>
-        <a href="">Frontend</a>
-        <a href="">Backend</a>
-        <a href="">Webdesign</a>
-        <a href="">Contact us</a>
+        <a href="./pages/frontend/">Frontend</a>
+        <a href="./pages/backend/">Backend</a>
+        <a href="./pages/webDesign/">Webdesign</a>
+        <a href="./pages/contactPage/">Contact us</a>
       </nav>
     </header>
-    <section id="top-section"></section>
+    <section id="intro-section">
+      <div>
+        <h1>Start your career in tech</h1>
+        <p>
+          Turn ambition into job-ready skills and become a Frontend developer,
+          Backend developer or UX/UI web Designer from scratch.
+        </p>
+        <button>Explore Courses</button>
+        <button>Apply now</button>
+      </div>
+      <picture>
+        <img
+          src="./images/intro_image.jpeg"
+          alt="wallpaper of coding academy"
+        />
+      </picture>
+    </section>
     <section id="information-section"></section>
     <section id="testimonial-section"></section>
     <footer></footer>
