made css changes to better fit screen and proportions

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <section id="intro-section">
       <div>
-        <h1 class="main-heading">Start your career in tech</h1>
+        <h1 class="hero-main-text">Start your career in tech</h1>
         <p class="intro-text">
           Turn ambition into job-ready skills<br />
           and become a Frontend developer, Backend developer<br />
@@ -46,6 +46,10 @@
           alt="wallpaper of coding academy"
         />
       </picture>
+    </section>
+    <section>
+      
+
     </section>
     <section id="information-section"></section>
     <section id="testimonial-section"></section>
