Added Some random information area

--- a/index.html
+++ b/index.html
@@ -47,9 +47,60 @@
         />
       </picture>
     </section>
-    <section>
-      
-
+    <section id="information-section">
+      <h2 class="information-header">Some random information</h2>
+      <table>
+        <tr>
+          <td>
+            <picture>
+              <img
+                class="information-image"
+                src="./images/Code Elite.png"
+                alt="logo of code elite academy"
+              />
+              <p>
+                this is some subtext under an ilustration or image
+              </p>
+            </picture>
+          </td>
+          <td>
+            <picture>
+              <img
+                class="information-image"
+                src="./images/Code Elite.png"
+                alt="logo of code elite academy"
+              />
+              <p>
+                this is some subtext under an ilustration or image
+              </p>
+            </picture>
+          </td>
+          <td>
+            <picture>
+              <img
+                class="information-image"
+                src="./images/Code Elite.png"
+                alt="logo of code elite academy"
+              />
+              <p>
+                this is some subtext under an ilustration or image
+              </p>
+            </picture>
+          </td>
+          <td>
+            <picture>
+              <img
+                class="information-image"
+                src="./images/Code Elite.png"
+                alt="logo of code elite academy"
+              />
+              <p>
+                this is some subtext under an ilustration or image
+              </p>
+            </picture>
+          </td>
+        </tr>
+      </table>
     </section>
     <section id="information-section"></section>
     <section id="testimonial-section"></section>
