Added quote, call to action and footer elements with styles

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
                 src="./images/Code Elite.png"
                 alt="logo of code elite academy"
               />
-              <p>
-                this is some subtext under an ilustration or image
-              </p>
+              <p>this is some subtext under an ilustration or image</p>
             </picture>
           </td>
           <td>
@@ -70,9 +68,7 @@
                 src="./images/Code Elite.png"
                 alt="logo of code elite academy"
               />
-              <p>
-                this is some subtext under an ilustration or image
-              </p>
+              <p>this is some subtext under an ilustration or image</p>
             </picture>
           </td>
           <td>
@@ -82,9 +78,7 @@
                 src="./images/Code Elite.png"
                 alt="logo of code elite academy"
               />
-              <p>
-                this is some subtext under an ilustration or image
-              </p>
+              <p>this is some subtext under an ilustration or image</p>
             </picture>
           </td>
           <td>
@@ -94,16 +88,33 @@
                 src="./images/Code Elite.png"
                 alt="logo of code elite academy"
               />
-              <p>
-                this is some subtext under an ilustration or image
-              </p>
+              <p>this is some subtext under an ilustration or image</p>
             </picture>
           </td>
         </tr>
       </table>
     </section>
-    <section id="information-section"></section>
-    <section id="testimonial-section"></section>
-    <footer></footer>
+    <section id="quote-section">
+      <p>
+        <q>
+          This is an inspiring quote, or a testimonial from a customer, Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All i know is that it looks nice. 
+          </q><br/>
+        - Thor
+      </p>
+    </section>
+    <section id="call-to-action-section">
+      <div>
+        <h3 class="call-to-action-main-text">Call to action! It's time!</h1>
+        <p class="call-to-action-text">
+          Sign up for our product by clicking that button right over there!
+        </p>
+      </div>
+      <button>Sign Up</button>
+    </section>
+    <footer>
+      Copyright ©
+    </footer>
   </body>
 </html>
