Replicated header and footer on all other pages

--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
   <body>
     <header id="header">
       <picture>
-        <img
-          class="logo-image"
-          src="./images/Code Elite.png"
-          alt="logo of code elite academy"
-        />
+        <a href="index.html">
+          <img
+            class="logo-image"
+            src="./images/Code Elite.png"
+            alt="logo of code elite academy"
+          />
+        </a>
       </picture>
       <nav id="navigation">
-        <a href="./pages/frontend/">Frontend</a>
-        <a href="./pages/backend/">Backend</a>
-        <a href="./pages/webDesign/">Webdesign</a>
-        <a href="./pages/contactPage/">Contact us</a>
+        <a href="./pages/frontend/frontend.html">Frontend</a>
+        <a href="./pages/backend/backend.html">Backend</a>
+        <a href="./pages/webDesign/webDesign.html">Webdesign</a>
+        <a href="./pages/contactPage/contactPage.html">Contact us</a>
       </nav>
     </header>
     <section id="intro-section">
