--- a/pages/backend/backend.html
+++ b/pages/backend/backend.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <header id="header">
+      <picture>
+        <a href="../../index.html">
+          <img
+            class="logo-image"
+            src="./images/Code Elite.png"
+            alt="logo of code elite academy"
+          />
+        </a>
+      </picture>
+      <nav id="navigation">
+        <a href="../../pages/frontend/frontend.html">Frontend</a>
+        <a href="../../pages/backend/backend.html">Backend</a>
+        <a href="../../pages/webDesign/webDesign.html">Webdesign</a>
+        <a href="../../pages/contactPage/contactPage.html">Contact us</a>
+      </nav>
+    </header>
+    <footer>Copyright ©</footer>
   </body>
 </html>
