Almost finished with the homepage but do not forget to check about the Roboto font

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             class="logo-image"
             src="./images/Code Elite.png"
             alt="logo of code elite academy"
-          />
+          >
         </a>
       </picture>
       <nav id="navigation">
@@ -38,59 +38,70 @@
           and become a Frontend developer, Backend developer<br />
           or UX/UI web Designer from scratch.
         </p>
-        <button>Explore Courses</button>
-        <button>Apply now</button>
+        <a href="./pages/contactPage/contactPage.html">
+          <button>
+            Apply now
+          </button>
+        </a>
       </div>
       <picture>
         <img
           class="intro-image"
           src="./images/intro_image.jpeg"
           alt="wallpaper of coding academy"
-        />
+        >
       </picture>
     </section>
     <section id="information-section">
-      <h2 class="information-header">Some random information</h2>
+      <h2 class="information-header">Choose your passion!</h2>
       <table>
         <tr>
           <td>
             <picture>
-              <img
-                class="information-image"
-                src="./images/Code Elite.png"
-                alt="logo of code elite academy"
-              />
-              <p>this is some subtext under an ilustration or image</p>
+              <a href="./pages/frontend/frontend.html">
+                <img
+                  class="information-image"
+                  src="./images/front_end.jpg"
+                  alt="image of frontend"
+                >
+              </a>
+              <p>click for more information about Frontend Development</p>
             </picture>
           </td>
           <td>
             <picture>
-              <img
-                class="information-image"
-                src="./images/Code Elite.png"
-                alt="logo of code elite academy"
-              />
-              <p>this is some subtext under an ilustration or image</p>
+              <a href="./pages/backend/backend.html">
+                <img
+                  class="information-image"
+                  src="./images/back_end.jpg"
+                  alt="image of backend"
+                >
+              </a>
+              <p>click for more information about Backend Development</p>
             </picture>
           </td>
           <td>
             <picture>
-              <img
-                class="information-image"
-                src="./images/Code Elite.png"
-                alt="logo of code elite academy"
-              />
-              <p>this is some subtext under an ilustration or image</p>
+              <a href="./pages/webDesign/webDesign.html">
+                <img
+                  class="information-image"
+                  src="./images/web_design.jpg"
+                  alt="image of web design"
+                >
+              </a>
+              <p>click for more infromation about UX/UI Design</p>
             </picture>
           </td>
           <td>
             <picture>
-              <img
-                class="information-image"
-                src="./images/Code Elite.png"
-                alt="logo of code elite academy"
-              />
-              <p>this is some subtext under an ilustration or image</p>
+              <a href="./pages/contactPage/contactPage.html">
+                <img
+                  class="information-image"
+                  src="./images/not_sure.jpg"
+                  alt="image not sure"
+                >
+              </a>
+              <p>Still not sure what to choose? Click to schedule a short call</p>
             </picture>
           </td>
         </tr>
@@ -99,21 +110,25 @@
     <section id="quote-section">
       <p>
         <q>
-          This is an inspiring quote, or a testimonial from a customer, Maybe
-          it's just filling up space, or maybe people will actually read it. Who
-          knows? All i know is that it looks nice. 
+          A good programmer is someone who always looks both ways before crossing a one-way street. 
           </q><br/>
-        - Thor
+          <p id="quote-author">
+            - Doug Linder
+          </p>
       </p>
     </section>
     <section id="call-to-action-section">
       <div>
         <h3 class="call-to-action-main-text">Call to action! It's time!</h1>
         <p class="call-to-action-text">
-          Sign up for our product by clicking that button right over there!
+          Keep in touch with us to be notified about the best new offers!
         </p>
       </div>
-      <button>Sign Up</button>
+      <a href="./pages/contactPage/contactPage.html">
+        <button>
+          Keep in touch
+        </button>
+      </a>
     </section>
     <footer>
       Copyright ©
