--- a/index.html
+++ b/index.html
@@ -130,6 +130,70 @@
         </button>
       </a>
     </section>
+           <br>
+           <br>
+
+    <form>
+
+      <fieldset class="group">
+          <!-- full name class -->
+          <div class="full name">
+              <label for="full name"><strong>Full Name:</strong></label>
+              <input type="text" name="full name" id="full name" required>
+          </div>
+
+
+      <!-- email class-->
+      <div class="email">
+          <label for="email"><strong>E-mail:</strong></label>
+          <input type="email" name="email" id="email" required>
+      </div>
+
+      <!-- three options of buttons to choose (radio button) and css choices class -->
+      <div class="choices">
+          <label><strong>Which one is your favorite? </strong></label>
+          <label>
+              <input type="radio" name="devweb" value="frontend" checked>Front-end
+          </label>
+          <label>
+              <input type="radio" name="devweb" value="backend">Back-end
+          </label>
+          <label>
+              <input type="radio" name="devweb" value="web design">Web Design
+          </label>
+      </div>
+
+      <!-- 3 options of level to choose (select option) and css -->
+      <div class="level">
+          <label for="Level"><strong>Level: </strong></label>
+          <select id="Level" required>
+            <option selected disabled value="">Select</option>
+            <option>Junior</option>
+            <option>Mid-Level</option>
+            <option>Senior</option>
+          </select>
+      </div>
+
+      <!-- box -->
+      <div class="box">
+          <br>
+          <label for="notes"><strong>Let us know a little bit more about you: </strong></label>
+          <textarea rows="6" style="width: 26em" id="notes" name="notes"></textarea>
+      </div>
+          <br>
+          <br>
+          <br>
+        
+      <!-- Button to send the form -->
+      <button class="button" type="submit" onsubmit="">Send</button>            
+
+  </form>    
+
+           <br>
+           <br>
+           <br>
+           <br>
+
     <footer>
       Copyright ©
     </footer>
