Completed Styling and replacing images

--- a/pages/backend/backend.html
+++ b/pages/backend/backend.html
@@ -24,38 +24,39 @@
         <a href="../../pages/contactPage/contactPage.html">Contact us</a>
       </nav>
     </header>
-    <h1 class="webdesign-main-text">UX/UI Web Design</h1>
+    <h1 class="backend-main-text">Backend Development</h1>
     <section id="introduction-section">
       <div class="image-link">
         <div>
-          <h2 id="whylearn-text">Why to learn web design</h2>
+          <h2 id="whylearn-text">Why to learn Backend Development</h2>
           <br />
-          <p id="webdesign-text">
-            Learning web design is a great way to lay the groundwork for further
-            skills development in computer science, data science, graphic
-            design, or motion graphics. Aspiring entrepreneurs, artists, and
-            activists can all make use of the digital landscape to help their
-            ideas reach a larger audience.
+          <p id="backend-text">
+            Backend Development is everything that happens behind the curtains.
+            Where does the data go? What makes the website run? How does it know
+            what I was doing on the last page? All that and more is the work the
+            Backend is responsible for handling. You can see it as the clockwork
+            of a clock, without it, nothing works. If what you fancy is getting
+            into the thick and rough of the code, analizing data and handling
+            the logic of the page, then Backend is for you.
           </p>
         </div>
-        <picture>
-          <img
-            class="image-introduction"
-            src="./images/image-introduction.jpg"
-            alt="image for introduction section"
-          />
-        </picture>
+        <video class="image-introduction" autoplay loop muted poster="./images/static-binary-code.png">
+          <source src="./images/stock-video-3d-animation-blue-binary-code.mp4" type="video/mp4">
+        </video>
       </div>
     </section>
-    <section id="motivate-text">
-      <div>
-        <p>
-          Decide today to be stronger tomorrow and nothing will be able to stop
-          you.
-        </p>
-      </div>
+    <section id="explore-section">
+      <picture>
+        <img src="" alt="">
+      </picture>
     </section>
     <section id="course-section">
+      <h3 id="course-section-header">Learn at your own pace</h3>
+      <p id="course-section-text">
+        Pick up a level and start learning! Explore all the options available
+        and develop your skills to the next level! Nobody starts off knowing
+        everything, and there is always something else to learn.
+      </p>
       <table>
         <tr>
           <td>
@@ -78,7 +79,7 @@
                 alt="image for advanced course"
               />
               <div class="card-content">
-                <h3>Learn to be advanced</h3>
+                <h3>Learn more advanced stuff</h3>
                 <p>6 month course</p>
                 <a href="../contactPage/contactPage.html"> Start now </a>
               </div>
@@ -91,7 +92,7 @@
                 alt="image for expert course"
               />
               <div class="card-content">
-                <h3>Learn to be an expert</h3>
+                <h3>Become an expert</h3>
                 <p>10 month course</p>
                 <a href="../contactPage/contactPage.html"> Start now </a>
               </div>
@@ -101,7 +102,7 @@
       </table>
     </section>
     <section id="links-section">
-      <p id="tech-title">Technologies used by web designers</p>
+      <p id="tech-title">Technologies used by backend developers</p>
       <table>
         <tr>
           <td>
@@ -109,15 +110,15 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <img
-                    src="./images/figma-image.png"
-                    alt="logo for figma"
+                    src="./images/Javascript-logo.png"
+                    alt="logo for javascript"
                     style="width: 150px; height: 150px"
                   />
                 </div>
                 <div class="flip-card-back">
-                  <h1>Figma</h1>
+                  <h1>Javascript</h1>
                   <p>Click to see more information</p>
-                  <a href="https://www.figma.com/" target="_blank"> Go </a>
+                  <a href="https://www.javascript.com/" target="_blank"> Go </a>
                 </div>
               </div>
             </div>
@@ -127,16 +128,16 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <img
-                    src="./images/photoshop-image.png"
-                    alt="logo for photoshop"
+                    src="./images/CSharp.png"
+                    alt="logo for CSharp"
                     style="width: 150px; height: 150px"
                   />
                 </div>
                 <div class="flip-card-back">
-                  <h1>Photoshop</h1>
+                  <h1>C Sharp</h1>
                   <p>Click to see more information</p>
                   <a
-                    href="https://www.adobe.com/products/photoshop.html?promoid=RBS7NL7F&mv=other"
+                    href="https://learn.microsoft.com/en-us/dotnet/csharp/"
                     target="_blank"
                   >
                     Go
@@ -150,16 +151,16 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <img
-                    src="./images/illustrator-image.png"
-                    alt="logo for illustrator"
+                    src="./images/CPlusPlus.png"
+                    alt="logo for C Plus Plus"
                     style="width: 150px; height: 150px"
                   />
                 </div>
                 <div class="flip-card-back">
-                  <h1>Illustrator</h1>
+                  <h1>C++</h1>
                   <p>Click to see more information</p>
                   <a
-                    href="https://www.adobe.com/products/illustrator.html"
+                    href="https://cplusplus.com/"
                     target="_blank"
                   >
                     Go
@@ -173,16 +174,16 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <img
-                    src="./images/html-image.png"
-                    alt="logo for html"
+                    src="./images/python.png"
+                    alt="logo for python"
                     style="width: 150px; height: 150px"
                   />
                 </div>
                 <div class="flip-card-back">
-                  <h1>HTML</h1>
+                  <h1>Python</h1>
                   <p>Click to see more information</p>
                   <a
-                    href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element"
+                    href="https://www.python.org/"
                     target="_blank"
                   >
                     Go
@@ -196,16 +197,16 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <img
-                    src="./images/css-image.png"
+                    src="./images/java.png"
                     alt="logo for css"
                     style="width: 150px; height: 150px"
                   />
                 </div>
                 <div class="flip-card-back">
-                  <h1>CSS</h1>
+                  <h1>Java</h1>
                   <p>Click to see more information</p>
                   <a
-                    href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+                    href="https://www.java.com/en/"
                     target="_blank"
                   >
                     Go
@@ -219,16 +220,16 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <img
-                    src="./images/aftereffects-image.png"
-                    alt="logo for after effects"
+                    src="./images/ruby.png"
+                    alt="logo for ruby"
                     style="width: 150px; height: 150px"
                   />
                 </div>
                 <div class="flip-card-back">
-                  <h1>After Effects</h1>
+                  <h1>Ruby</h1>
                   <p>Click to see more information</p>
                   <a
-                    href="https://www.adobe.com/products/aftereffects.html"
+                    href="https://www.ruby-lang.org/en/"
                     target="_blank"
                   >
                     Go
@@ -242,16 +243,16 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <img
-                    src="./images/media-image.png"
-                    alt="logo for media encoder"
+                    src="./images/go (1).png"
+                    alt="logo for Go"
                     style="width: 150px; height: 150px"
                   />
                 </div>
                 <div class="flip-card-back">
-                  <h1>Media Encoder</h1>
+                  <h1>Go</h1>
                   <p>Click to see more information</p>
                   <a
-                    href="https://www.adobe.com/ca/products/media-encoder.html"
+                    href="https://go.dev/"
                     target="_blank"
                   >
                     Go
