--- a/contact.html
+++ b/contact.html
@@ -193,6 +193,15 @@
            <br>
            <br>
            <br>
+                <link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
+<a id="robbu-whatsapp-button" class="right" target="_blank" href="https://api.whatsapp.com/send?phone=5511984728113">
+  <div class="rwb-tooltip">Talk to us!</div>
+  <img src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg">
+</a>
+          <br>
+          <br>
+          <br>
+          <br>
 
     <footer>
       Copyright ©
