--- a/pages/webDesign/webDesign.html
+++ b/pages/webDesign/webDesign.html
@@ -45,12 +45,10 @@
         </picture>
       </div>
     </section>
-    <section id="motivate-text">
-      <div>
-        <p>
-          Decide today to be stronger tomorrow and nothing will be able to stop you. 
-        </p>
-      </div>
+    <section>
+      <p id="motivate-text">
+        Decide today to be stronger tomorrow and nothing will be able to stop you. 
+      </p>
     </section>
     <section id="course-section">
       <table>
