Fixed inconsistencies between pages

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </a>
       </picture>
       <nav id="navigation">
+        <a href="./index.html">Homepage</a>
         <a href="./pages/frontend/frontend.html">Frontend</a>
         <a href="./pages/backend/backend.html">Backend</a>
         <a href="./pages/webDesign/webDesign.html">Webdesign</a>
