--- a/pages/contactPage/contactPage.html
+++ b/pages/contactPage/contactPage.html
@@ -18,6 +18,7 @@
         </a>
       </picture>
       <nav id="navigation">
+        <a href="../../index.html">Homepage</a>
         <a href="../../pages/frontend/frontend.html">Frontend</a>
         <a href="../../pages/backend/backend.html">Backend</a>
         <a href="../../pages/webDesign/webDesign.html">Webdesign</a>
@@ -38,66 +39,88 @@
           class="intro-image"
           src="./images/intro_image.jpeg"
           alt="wallpaper of coding academy"
-        >
+        />
       </picture>
     </section>
     <section id="form-section">
       <form>
-            <!-- full name class -->
-            <div class="full name">
-                <label for="full name"><strong>Full Name:</strong></label>
-                <input type="text" name="full name" id="full name" required>
-            </div>
-  
-  
+        <h2 class="form-header-text">Contact Us!</h2>
+        <!-- full name class -->
+        <div class="input-groups">
+          <label><strong>Full Name:</strong></label>
+          <input type="text" name="full name" id="full name" required />
+        </div>
+
         <!-- email class-->
-        <div class="email">
-            <label for="email"><strong>E-mail:</strong></label>
-            <input type="email" name="email" id="email" required>
+        <div class="input-groups">
+          <label><strong>E-mail:</strong></label>
+          <input type="email" name="email" id="email" required />
         </div>
-  
+
         <!-- three options of buttons to choose (radio button) and css choices class -->
-        <div class="choices">
-            <label><strong>Which one is your favorite? </strong></label>
-            <label>
-                <input type="radio" name="devweb" value="frontend" checked>Front-end
-            </label>
-            <label>
-                <input type="radio" name="devweb" value="backend">Back-end
-            </label>
-            <label>
-                <input type="radio" name="devweb" value="web design">Web Design
-            </label>
+        <div class="input-groups">
+          <label><strong>Which one is your favorite? </strong></label>
+          <label>
+            <input
+              type="radio"
+              name="devweb"
+              value="frontend"
+              checked
+            />Front-end
+          </label>
+          <label>
+            <input type="radio" name="devweb" value="backend" />Back-end
+          </label>
+          <label>
+            <input type="radio" name="devweb" value="web design" />Web Design
+          </label>
         </div>
-  
+
         <!-- 3 options of level to choose (select option) and css -->
-        <div class="level">
-            <label for="Level"><strong>Level: </strong></label>
-            <select id="Level" required>
-              <option selected disabled value="">Select</option>
-              <option>Junior</option>
-              <option>Mid-Level</option>
-              <option>Senior</option>
-            </select>
+        <div class="input-groups">
+          <label><strong>Level: </strong></label>
+          <select id="Level" required>
+            <option selected disabled value="">Select</option>
+            <option>Junior</option>
+            <option>Mid-Level</option>
+            <option>Senior</option>
+          </select>
         </div>
-  
+
         <!-- box -->
-        <div class="box">
-            <br>
-            <label for="notes"><strong>Let us know a little bit more about you: </strong></label>
-            <textarea rows="6" style="width: 26em" id="notes" name="notes"></textarea>
+        <div class="input-groups">
+          <br />
+          <label
+            ><strong>Let us know a little bit more about you: </strong></label
+          >
+          <textarea
+            rows="6"
+            style="width: 26em"
+            id="notes"
+            name="notes"
+          ></textarea>
         </div>
-          
+
         <!-- Button to send the form -->
-        <button class="button" type="submit" onsubmit="">Send</button>            
-  
-    </form>    
-  
-                  <link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
-  <a id="robbu-whatsapp-button" class="right" target="_blank" href="https://api.whatsapp.com/send?phone=5511984728113">
-    <div class="rwb-tooltip">Talk to us!</div>
-    <img src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg">
-  </a>
+        <button class="button" type="submit" onsubmit="">Send</button>
+      </form>
+    </section>
+    <section id="Whatsapp-Button">
+      <link
+        rel="stylesheet"
+        href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css"
+      />
+      <a
+        id="robbu-whatsapp-button"
+        class="right"
+        target="_blank"
+        href="https://api.whatsapp.com/send?phone=5511984728113"
+      >
+        <div class="rwb-tooltip">Talk to us!</div>
+        <img
+          src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg"
+        />
+      </a>
     </section>
 
     <footer>Copyright ©</footer>
