fixed contact card and the header

--- a/pages/contactPage/contactPage.html
+++ b/pages/contactPage/contactPage.html
@@ -43,7 +43,7 @@
       <picture>
         <img
           class="intro-image"
-          src="./images/intro_image.jpeg"
+          src="./images/intro_image.png"
           alt="wallpaper of coding academy"
         >
       </picture>
