backend page responsiveness set for tablet

--- a/pages/backend/backend.html
+++ b/pages/backend/backend.html
@@ -113,7 +113,7 @@
                   <img
                     src="./images/Javascript-logo.png"
                     alt="logo for javascript"
-                    style="width: 150px; height: 150px"
+                    class="image-flip-card"
                   />
                 </div>
                 <div class="flip-card-back">
@@ -131,7 +131,7 @@
                   <img
                     src="./images/CSharp.png"
                     alt="logo for CSharp"
-                    style="width: 150px; height: 150px"
+                    class="image-flip-card"
                   />
                 </div>
                 <div class="flip-card-back">
@@ -154,7 +154,7 @@
                   <img
                     src="./images/CPlusPlus.png"
                     alt="logo for C Plus Plus"
-                    style="width: 150px; height: 150px"
+                    class="image-flip-card"
                   />
                 </div>
                 <div class="flip-card-back">
@@ -177,7 +177,7 @@
                   <img
                     src="./images/python.png"
                     alt="logo for python"
-                    style="width: 150px; height: 150px"
+                    class="image-flip-card"
                   />
                 </div>
                 <div class="flip-card-back">
@@ -200,7 +200,7 @@
                   <img
                     src="./images/java.png"
                     alt="logo for css"
-                    style="width: 150px; height: 150px"
+                    class="image-flip-card"
                   />
                 </div>
                 <div class="flip-card-back">
@@ -223,7 +223,7 @@
                   <img
                     src="./images/ruby.png"
                     alt="logo for ruby"
-                    style="width: 150px; height: 150px"
+                    class="image-flip-card"
                   />
                 </div>
                 <div class="flip-card-back">
@@ -246,7 +246,7 @@
                   <img
                     src="./images/go (1).png"
                     alt="logo for Go"
-                    style="width: 150px; height: 150px"
+                    class="image-flip-card"
                   />
                 </div>
                 <div class="flip-card-back">
